--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kovaaks-api-client",
-  "version": "0.1.2",
+  "version": "0.1.4",
   "description": "A TypeScript client for the Kovaaks API",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -8,7 +8,8 @@
     "build": "tsc",
     "test": "jest",
     "lint": "eslint src --ext .ts",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "example": "npm run build && node -r ts-node/register examples/basic-usage.ts"
   },
   "keywords": [
     "kovaaks",
@@ -27,6 +28,7 @@
     "eslint": "^8.46.0",
     "jest": "^29.6.2",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.1.6"
   },
   "dependencies": {
