--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc",
     "test": "jest",
     "lint": "eslint src --ext .ts",
+    "prepare": "npm run build",
     "prepublishOnly": "npm run build",
     "example": "npm run build && node -r ts-node/register examples/basic-usage.ts"
   },
